Ajuste de swagger
